Fix closing tab in other split changes tabs in current split

BUG: 465808
FIXED-IN: 23.04
(cherry picked from commit f417673ddf0f396fb79e8ce9524784aea9846085)