apps/lib/autotests/kate_view_mgmt_tests.h
@@ -41,6 +41,7 @@ private Q_SLOTS:
     void testNewWindowHasSameGlobalOptions();
     void testBug465811();
     void testBug465807();
+    void testBug465808();
 
 private:
     class QTemporaryDir *m_tempdir;
